fix: update comment